styling booking show

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,6 +1,6 @@
 .primary-button {
   font-family: $body-font;
-  background-color: #6ECAD6;
+  background-color: #489099;
   border: none;
   color: white;
   padding: 8px 16px;
@@ -19,7 +19,7 @@
 }
 .secondary-button {
   font-family: $body-font;
-  background: #489099 !important;
+  background: #CCCCCC !important;
   border: none;
   color: white;
   padding: 8px 16px !important;
