--- a/app/assets/stylesheets/components/_bookings_new.scss
+++ b/app/assets/stylesheets/components/_bookings_new.scss
@@ -1,45 +1,49 @@
-.container-booking{
-  display: flex;
-  justify-content: space-around;
-  margin: 32px;
+.main-booking-container{
+  height: 100vh;
 
-  .booking-box {
+  .container-booking {
     display: flex;
-    flex-direction: column;
-    background: white;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    width: 50vw;
-    border-radius: 8px;
+    justify-content: space-around;
+    margin: 32px;
 
-    .booking-title {
-      border-radius: 8px 8px 0 0;
+    .booking-box {
       display: flex;
-      justify-content: space-around;
-      font-weight: 700;
-      padding: 16px 0;
-      color: #FFFFFF;
-      font-size: 18px;
-      background-color: #6ECAD6;
-    }
+      flex-direction: column;
+      background: white;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+      width: 50vw;
+      border-radius: 8px;
 
-    .booking-box-details{
-      padding: 25px 30px;
-
-      .booking-update-btn {
+      .booking-title {
+        border-radius: 8px 8px 0 0;
         display: flex;
-        justify-content: space-between;
-        .btn-primary {
-          background-color: #6ECAD6;
-          border: none;
-          margin-left: auto;
-          margin-top: 10px;
-          margin-bottom: 10px;
-        }
+        justify-content: space-around;
+        font-weight: 700;
+        padding: 16px 0;
+        color: #FFFFFF;
+        font-size: 18px;
+        background-color: #6ECAD6;
       }
-      .input-description {
-        height: 300px !important;
-        &::placeholder {
-          color: rgba(103, 128, 159, 1);
+
+      .booking-box-details{
+        padding: 25px 30px;
+
+        .booking-update-btn {
+          display: flex;
+          justify-content: space-between;
+          .btn-primary {
+            background-color: #6ECAD6;
+            border: none;
+            margin-left: auto;
+            margin-top: 10px;
+            margin-bottom: 10px;
+          }
+        }
+        .input-description {
+          height: 300px !important;
+          &::placeholder {
+            color: rgba(103, 128, 159, 1);
+          }
         }
       }
     }
