--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -4,7 +4,7 @@
   width:100%;
   height:100px;
   text-align: center;
-  background-color: #489099;
+  background-color: #6ECAD6;
   padding: 50px;
   color: white;
   li {
