--- a/app/assets/stylesheets/pages/_bookings_show.scss
+++ b/app/assets/stylesheets/pages/_bookings_show.scss
@@ -49,197 +49,217 @@
 
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 /*Just the background stuff */
-
+.mid-container{
+  display: flex;
+  justify-content: space-around;
 /* The card */
-.cardx {
-  position: relative;
-  height: 450px;
-  width: 900px;
-  margin: 80px auto;
-  background-color: #FFF;
-  -webkit-box-shadow: 10px 10px 93px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 93px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 10px 10px 93px 0px rgba(0, 0, 0, 0.75);
+  .cardx {
+    position: relative;
+    height: 450px;
+    width: 900px;
+    margin: 80px auto;
+    background-color: #FFF;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    border-radius: 8px;
 
+    #my-confirmation{
+    display: flex;
+    justify-content: flex-end;
+    font-weight: 700;
+    padding: 16px 0;
+    padding-right: 56px;
+    color: #FFFFFF;
+    font-size: 18px;
+    background-color: #6ECAD6;
+    border-radius: 8px 8px 0 0;
+    }
 
-/* Image on the left side */
-.thumbnail {
-  float: left;
-  position: absolute;
-  left: 30px;
-  top: -30px;
-  height: 320px;
-  width: 530px;
-  -webkit-box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.75);
-  overflow: hidden;
-}
-
-/*object-fit: cover; */
-/*object-position: center; */
-img.left {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  height: auto;
-  width: 100%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-/* Right side of the card */
-.right {
-  margin-left: 590px;
-  margin-right: 20px;
-}
-
-h1 {
-  padding-top: 15px;
-  font-size: 3.0rem;
-  color: #4B4B4B;
-}
-
-.author {
-  background-color: #6ECAD6;
-  height: 55px;
-  width: 70%;
-  border-radius: 20px;
-}
-
-.author > img {
-  padding-top: 5px;
-  margin-left: 5px;
-  float: left;
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-}
-
-h2 {
-  padding-top: 8px;
-  margin-right: 6px;
-  text-align: right;
-  font-size: 1.8rem;
-}
-h3{
-  font-size: 5rem;
-}
-
-.separator {
-  margin-top: 10px;
-  border: 2px solid #489099;
-}
-
-p {
-  text-align: justify;
-  padding-top: 10px;
-  font-size: px;
-  line-height: 150%;
-  color: #4B4B4B;
-  word-wrap: break-word;
-}
-
-/* DATE of release */
-h5 {
-  font-size: 6rem;
-  color: #C3C3C3;
-}
-
-h6 {
-  font-size: 2rem;
-  color: #C3C3C3;
-}
-
-/* Those futur buttons */
-ul {
-  margin-top:20px;
-  margin-left: 50px;
-}
-
-li {
-  display: inline;
-  list-style: none;
-  padding-right: 4px;
-  // color: #7B7B7B;
-  font-size: 4rem;
-  color: #6ECAD6;
-
-}
-
-/* Floating action button */
-.fab {
-  position: absolute;
-  right: 50px;
-  bottom: -40px;
-  box-sizing: border-box;
-  padding-top: 18px;
-  background-color:  #489099;
-  width: 80px;
-  height: 80px;
-  color: white;
-  text-align: center;
-  border-radius: 50%;
-  -webkit-box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
-}.fab1 {
-  position: absolute;
-  right: 140px;
-  bottom: -40px;
-  box-sizing: border-box;
-  padding-top: 18px;
-  background-color:  #489099;
-  width: 80px;
-  height: 80px;
-  color: white;
-  text-align: center;
-  border-radius: 50%;
-  -webkit-box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
-}.fab2 {
-  position: absolute;
-  right: 230px;
-  bottom: -40px;
-  box-sizing: border-box;
-  padding-top: 18px;
-  background-color:  #489099;
-  width: 80px;
-  height: 80px;
-  color: white;
-  text-align: center;
-  border-radius: 50%;
-  -webkit-box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
-}.fab3 {
-  position: absolute;
-  right: 320px;
-  bottom: -40px;
-  box-sizing: border-box;
-  padding-top: 18px;
-  background-color:  #489099;
-  width: 80px;
-  height: 80px;
-  color: white;
-  text-align: center;
-  border-radius: 50%;
-  -webkit-box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 10px 10px 50px 0px rgba(0, 0, 0, 0.75);
-}
-}
-.abso {
-  position: absolute;
-  top: 290px;
-  h3 {
-    padding: 0;
-    margin: 0;
+  /* Image on the left side */
+  .thumbnail {
+    float: left;
+    position: absolute;
+    left: 30px;
+    top: -30px;
+    height: 320px;
+    width: 530px;
+    overflow: hidden;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   }
+
+  /*object-fit: cover; */
+  /*object-position: center; */
+  img.left {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    height: auto;
+    width: 100%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+
+  /* Right side of the card */
+  .right {
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    padding-right: 24px;
+
+    h2 {
+      padding-left: 30px;
+    }
+  }
+
+  h1 {
+    padding-top: 15px;
+    font-size: 3.0rem;
+    color: #4B4B4B;
+  }
+
+  .author {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .booking-description {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 70px;
+  }
+
+  .author > img {
+    margin-left: 8px;
+    float: left;
+    height: 72px;
+    width: 72px;
+    border-radius: 50%;
+  }
+
+  h2 {
+    padding-top: 8px;
+    margin-right: 6px;
+    text-align: right;
+    font-size: 1.8rem;
+  }
+  h3{
+    font-size: 5rem;
+  }
+
   p {
-    padding: 0;
-    margin: 0;
+    padding-top: 10px;
+    font-size: px;
+    line-height: 150%;
+    color: #4B4B4B;
+    word-wrap: break-word;
+  }
+
+  /* DATE of release */
+  h5 {
+    font-size: 6rem;
+    color: #C3C3C3;
+  }
+
+  h6 {
+    font-size: 2rem;
+    color: #C3C3C3;
+  }
+
+  /* Those futur buttons */
+  ul {
+    margin-top:20px;
+    margin-left: 50px;
+  }
+
+  li {
+    display: inline;
+    list-style: none;
+    padding-right: 4px;
+    // color: #7B7B7B;
+    font-size: 4rem;
+    color: #6ECAD6;
+
+  }
+
+  /* Floating action button */
+  .fab {
+    position: absolute;
+    right: 50px;
+    bottom: -40px;
+    box-sizing: border-box;
+    padding-top: 28px;
+    padding-left: 4px;
+    background-color:  #6ECAD6;
+    width: 80px;
+    height: 80px;
+    color: white;
+    text-align: center;
+    border-radius: 50%;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  }.fab1 {
+    position: absolute;
+    right: 140px;
+    bottom: -40px;
+    box-sizing: border-box;
+    padding-top: 28px;
+    padding-left: 4px;
+    background-color:  #6ECAD6;
+    width: 80px;
+    height: 80px;
+    color: white;
+    text-align: center;
+    border-radius: 50%;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  }.fab2 {
+    position: absolute;
+    right: 230px;
+    bottom: -40px;
+    box-sizing: border-box;
+    padding-top: 28px;
+    padding-left: 4px;
+    background-color:  #6ECAD6;
+    width: 80px;
+    height: 80px;
+    color: white;
+    text-align: center;
+    border-radius: 50%;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  }.fab3 {
+    position: absolute;
+    right: 320px;
+    bottom: -40px;
+    box-sizing: border-box;
+    padding-top: 28px;
+    padding-left: 4px;
+    background-color:  #6ECAD6;
+    width: 80px;
+    height: 80px;
+    color: white;
+    text-align: center;
+    border-radius: 50%;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  }
+  .fa-3x{
+    font-size: 1.6em;
+  }
+  }
+  .abso {
+    position: absolute;
+    top: 290px;
+    background-color: #6ECAD6;
+    padding: 0 50px;
+    border-radius: 0px 8px 8px 0;
+    margin-top: 40px;
+    color: #FFFFFF;
+    h2 {
+      text-align: center;
+      font-weight: 700;
+    }
+    h4 {
+      font-size: 1.2rem;
+      text-align: center;
+    }
   }
 }
