--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -38,7 +38,7 @@
             <h4><%= therapist.last_name %></h4>
             <h4><span><%= therapist.expertise %></span></h4>
         <% end %>
-      <%= link_to "Book", user_path(therapist), class: 'primary-button' %>
+      <%= link_to "Book", users_path(therapist), class: 'primary-button' %>
         <button class="primary-button" data-toggle="modal" data-target="#myModal_<%= therapist.id %>"> View </button>
       </figcaption>
     </figure>
