fixing styling all around

--- a/app/assets/stylesheets/pages/_show_modal.scss
+++ b/app/assets/stylesheets/pages/_show_modal.scss
@@ -86,6 +86,7 @@
   width: 50%;
   margin: 45px 12px 0px 50px;
   .modal-user-show-therapist-description {
+    margin-bottom: 24px;
   }
 }
 .modal-user-show-expertise {
