changes done seeds done

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -109,6 +109,7 @@
           height: 48px;
           display: block;
           margin: 8px auto;
+          object-fit: cover;
         }
 
         .avatar-profile {
