--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,7 +19,7 @@
     <figure class="snip1336">
       <img src="https://res.cloudinary.com/dnqrlagsz/image/upload/v1552391869/card-photo.png" alt="sample87" />
       <figcaption>
-      <%= cl_image_tag(therapist.photo.url) %>
+      <%= cl_image_tag(therapist.photo.url, class: 'profile')%>
         <div class="card-details">
           <h4><%= therapist.first_name %></h4>
         <div class="review-stars">
