--- a/app/assets/stylesheets/pages/_show_modal.scss
+++ b/app/assets/stylesheets/pages/_show_modal.scss
@@ -21,6 +21,7 @@
     top: -110px;
     border: solid white;
     left: 50px;
+    object-fit: cover;
   }
   .modal-master-box {
     display: flex;
