--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,11 +1,16 @@
 <div class="profile-container">
   <div class="tables-left">
 
+
     <!--UPCOMING SESSIONS TABLE -->
     <div class="tables-box">
       <div class="tables-title-row">UPCOMING SESSIONS</div>
       <div class="description-row">
-        <div class="col">THERAPIST</div>
+        <% if current_user.therapist %>
+          <div class="col">CLIENT</div>
+        <% else %>
+          <div class="col">THERAPIST</div>
+        <% end %>
         <div class="col">SCHEDULE</div>
         <div class="col">STATUS</div>
         <div class="col">DETAILS</div>
@@ -16,7 +21,7 @@
             <% if current_user.therapist %>
               <div class="col upcoming-labels upcoming-names" data-label="User">
                 <div class="upcoming-avatar">
-                  <%= image_tag "head.png", class: "user-avatar" %>
+                  <%= cl_image_tag(booking.client.photo.url, class: "user-avatar") %>
                 </div>
                 <div class="upcoming-full-name">
                   <%= booking.client.full_name %>
@@ -25,7 +30,7 @@
             <% else %>
               <div class="col upcoming-labels upcoming-names" data-label="User">
                 <div class="upcoming-avatar">
-                  <%= image_tag "head.png", class: "user-avatar" %>
+                  <%= cl_image_tag(booking.therapist.photo.url, class: "user-avatar") %>
                 </div>
                 <div class="upcoming-full-name">
                   <%= booking.therapist.full_name %>
@@ -44,7 +49,6 @@
               <% end %>
             </div>
              <div class="col primary-button" data-label="Details"><%= link_to "View", booking_path(booking) %></div>
-
           </div>
           <hr />
         <% end %>
@@ -104,4 +108,3 @@
     </div>
   </div>
 </div>
-
