--- a/app/assets/stylesheets/pages/_chatroomsshow.scss
+++ b/app/assets/stylesheets/pages/_chatroomsshow.scss
@@ -174,7 +174,7 @@ $feature : #4b9aaa;
   // border: 2px solid #6ECAD6;
   // box-shadow: 0px 0px 10px rgba(194,192,194,1);
   border-radius: 10px 0 0 10px;
-  width: 100%;
+  // width: 100%;
   height: 100%;
   z-index: -1;
 }
