--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -4,6 +4,6 @@
   messagesContainer.insertAdjacentHTML('beforeend', '<%= j render "message", message: @message, user_is_messages_author: true %>');
   input = document.querySelector('#message_content');
   input.value = '';
-  input.blur();
+  // input.blur();
       scrollLastMessageIntoView();
 <% end %>
