--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -101,12 +101,12 @@
   </div>
 
     <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Edit Booking">
-      <%= link_to edit_booking_path(@booking), :method => :post do %>
+      <%= link_to edit_booking_path(@booking) do %>
         <div class="fab1"><i class="far fa-edit fa-3x"></i></div>
       <% end %>
     </span>
 
-        <%= link_to new_booking_review_path(@booking), :method => :post do %>
+        <%= link_to new_booking_review_path(@booking) do %>
         <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Review">
           <div class="fab2"><i class="far fa-registered fa-3x"></i>
           </div>
@@ -114,7 +114,7 @@
         <% end %>
 
         <%= link_to profile_path do %>
-        <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Bookings">
+        <span class="d-inline-block" tabindex="0" data-toggle="tooltip" title="Profile">
           <div class="fab3"><i class="fas fa-book-reader fa-3x"></i>
           </div>
         </span>
