fixing last few css issues

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -59,6 +59,8 @@
 
         .primary-button {
           margin: 0;
+          width: 50%;
+          margin-left: 75px;
 
           a {
             text-decoration: none;
