--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -64,6 +64,7 @@ input.form-control {
   background-color: #489099;
   color: white;
   padding: 10px 20px;
+  text-align: center;
   // margin-top: 10px;
   h4 {
     margin: 0;
