--- a/app/assets/stylesheets/pages/_payments_new.scss
+++ b/app/assets/stylesheets/pages/_payments_new.scss
@@ -14,6 +14,7 @@
         border-radius: 100px;
         height: 120px;
         width: 120px;
+      object-fit: cover;
       }
     }
     .payments-new-colour-block {
