--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -103,7 +103,7 @@ Trial Run Unlimited Sessions<svg class="cta-icon" height="10" width="8"><use xli
     </div>
     <div class="middle-info">
       <h1>Meaningful therapy from every device</h1>
-      <p>It can be difficult to wait days or weeks until your next appointment. With Talkspace, you can send your therapist a message whenever you’re near a laptop, tablet, or smartphone. Your conversation carries over seamlessly across devices and uses banking-grade encryption to keep it safe and confidential.</p>
+      <p>It can be difficult to wait days or weeks until your next appointment. With Sessions, you can send your therapist a message whenever you’re near a laptop, tablet, or smartphone. Your conversation carries over seamlessly across devices and uses banking-grade encryption to keep it safe and confidential.</p>
       <div class="info-img">
         <img src="https://res.cloudinary.com/dnqrlagsz/image/upload/v1552405536/appstore_2.png" alt="">
         <img src="https://res.cloudinary.com/dnqrlagsz/image/upload/v1552405407/googleplay_1.png" alt="">
